era & weapon routes

--- a/views/home.html
+++ b/views/home.html
@@ -17,7 +17,6 @@
             overflow: hidden;
         }
         .container{
-            /* background: url('https://i.postimg.cc/50NxhyXG/Logo.png')no-repeat center center/cover; */
             z-index: 2;
             position: absolute;
         }
@@ -25,16 +24,16 @@
             position: relative;
             margin: 0;
             top: 310px;
-            left: 250px;
+            left: 225px;
             color: #d4d4d3;
             font-family: 'Audiowide', cursive;
         }
     </style>
-    <title>API</title>
+    <title>API Welcome</title>
 </head>
 <body>
     <div class="container">
-        <h1>Welcome To The API Of</h1>
+        <h1>WELCOME TO THE API OF</h1>
         <img src="https://i.postimg.cc/50NxhyXG/Logo.png" alt="">
     </div>
 </body>
